src/bindings.rs

extern "C" {
    #[doc = " Read memory from a cached file section"]
    #[doc = ""]
    #[doc = " Reads \\@size bytes of memory starting at virtual address \\@vaddr in the"]
    #[doc = " section identified by \\@isid in \\@iscache into \\@buffer."]
    #[doc = ""]
    #[doc = " The caller is responsible for allocating a \\@buffer of at least \\@size bytes."]
    #[doc = ""]
    #[doc = " The read request may be truncated if it crosses section boundaries or if"]
    #[doc = " \\@size is getting too big.  We support reading at least 4Kbyte in one chunk"]
    #[doc = " unless the read would cross a section boundary."]
    #[doc = ""]
    #[doc = " Returns the number of bytes read on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@iscache or \\@buffer is NULL."]
    #[doc = " Returns -pte_invalid if \\@size is zero."]
    #[doc = " Returns -pte_nomap if \\@vaddr is not contained in section \\@isid."]
    #[doc = " Returns -pte_bad_image if \\@iscache does not contain \\@isid."]
    pub fn pt_iscache_read(
        iscache: *mut pt_image_section_cache,
        buffer: *mut u8,
        size: u64,
        isid: ::std::os::raw::c_int,
        vaddr: u64,
    ) -> ::std::os::raw::c_int;
}
#[doc = " The traced memory image."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_image {
    _unused: [u8; 0],
}
extern "C" {
    #[doc = " Allocate a traced memory image."]
    #[doc = ""]
    #[doc = " An optional \\@name may be given to the image.  The name string is copied."]
    #[doc = ""]
    #[doc = " Returns a new traced memory image on success, NULL otherwise."]
    pub fn pt_image_alloc(name: *const ::std::os::raw::c_char) -> *mut pt_image;
}
extern "C" {
    #[doc = " Free a traced memory image."]
    #[doc = ""]
    #[doc = " The \\@image must have been allocated with pt_image_alloc()."]
    #[doc = " The \\@image must not be used after a successful return."]
    pub fn pt_image_free(image: *mut pt_image);
}
extern "C" {
    #[doc = " Get the image name."]
    #[doc = ""]
    #[doc = " Returns a pointer to \\@image's name or NULL if there is no name."]
    pub fn pt_image_name(image: *const pt_image) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Add a new file section to the traced memory image."]
    #[doc = ""]
    #[doc = " Adds \\@size bytes starting at \\@offset in \\@filename. The section is"]
    #[doc = " loaded at the virtual address \\@vaddr in the address space \\@asid."]
    #[doc = ""]
    #[doc = " The \\@asid may be NULL or (partially) invalid.  In that case only the valid"]
    #[doc = " fields are considered when comparing with other address-spaces.  Use this"]
    #[doc = " when tracing a single process or when adding sections to all processes."]
    #[doc = ""]
    #[doc = " The section is silently truncated to match the size of \\@filename."]
    #[doc = ""]
    #[doc = " Existing sections that would overlap with the new section will be shrunk"]
    #[doc = " or split."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@image or \\@filename is NULL."]
    #[doc = " Returns -pte_invalid if \\@offset is too big."]
    pub fn pt_image_add_file(
        image: *mut pt_image,
        filename: *const ::std::os::raw::c_char,
        offset: u64,
        size: u64,
        asid: *const pt_asid,
        vaddr: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Add a section from an image section cache."]
    #[doc = ""]
    #[doc = " Add the section from \\@iscache identified by \\@isid in address space \\@asid."]
    #[doc = ""]
    #[doc = " Existing sections that would overlap with the new section will be shrunk"]
    #[doc = " or split."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative error code otherwise."]
    #[doc = " Returns -pte_invalid if \\@image or \\@iscache is NULL."]
    #[doc = " Returns -pte_bad_image if \\@iscache does not contain \\@isid."]
    pub fn pt_image_add_cached(
        image: *mut pt_image,
        iscache: *mut pt_image_section_cache,
        isid: ::std::os::raw::c_int,
        asid: *const pt_asid,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Copy an image."]
    #[doc = ""]
    #[doc = " Adds all sections from \\@src to \\@image.  Sections that could not be added"]
    #[doc = " will be ignored."]
    #[doc = ""]
    #[doc = " Returns the number of ignored sections on success, a negative error code"]
    #[doc = " otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@image or \\@src is NULL."]
    pub fn pt_image_copy(image: *mut pt_image, src: *const pt_image) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Remove all sections loaded from a file."]
    #[doc = ""]
    #[doc = " Removes all sections loaded from \\@filename from the address space \\@asid."]
    #[doc = " Specify the same \\@asid that was used for adding sections from \\@filename."]
    #[doc = ""]
    #[doc = " Returns the number of removed sections on success, a negative error code"]
    #[doc = " otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@image or \\@filename is NULL."]
    pub fn pt_image_remove_by_filename(
        image: *mut pt_image,
        filename: *const ::std::os::raw::c_char,
        asid: *const pt_asid,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Remove all sections loaded into an address space."]
    #[doc = ""]
    #[doc = " Removes all sections loaded into \\@asid.  Specify the same \\@asid that was"]
    #[doc = " used for adding sections."]
    #[doc = ""]
    #[doc = " Returns the number of removed sections on success, a negative error code"]
    #[doc = " otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@image is NULL."]
    pub fn pt_image_remove_by_asid(
        image: *mut pt_image,
        asid: *const pt_asid,
    ) -> ::std::os::raw::c_int;
}
#[doc = " A read memory callback function."]
#[doc = ""]
#[doc = " It shall read \\@size bytes of memory from address space \\@asid starting"]
#[doc = " at \\@ip into \\@buffer."]
#[doc = ""]
#[doc = " It shall return the number of bytes read on success."]
#[doc = " It shall return a negative pt_error_code otherwise."]
pub type read_memory_callback_t = ::std::option::Option<
    unsafe extern "C" fn(
        buffer: *mut u8,
        size: usize,
        asid: *const pt_asid,
        ip: u64,
        context: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    #[doc = " Set the memory callback for the traced memory image."]
    #[doc = ""]
    #[doc = " Sets \\@callback for reading memory.  The callback is used for addresses"]
    #[doc = " that are not found in file sections.  The \\@context argument is passed"]
    #[doc = " to \\@callback on each use."]
    #[doc = ""]
    #[doc = " There can only be one callback at any time.  A subsequent call will replace"]
    #[doc = " the previous callback.  If \\@callback is NULL, the callback is removed."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@image is NULL."]
    pub fn pt_image_set_callback(
        image: *mut pt_image,
        callback: read_memory_callback_t,
        context: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
pub const pt_insn_class_ptic_error: pt_insn_class = 0;
pub const pt_insn_class_ptic_other: pt_insn_class = 1;
pub const pt_insn_class_ptic_call: pt_insn_class = 2;
pub const pt_insn_class_ptic_return: pt_insn_class = 3;
pub const pt_insn_class_ptic_jump: pt_insn_class = 4;
pub const pt_insn_class_ptic_cond_jump: pt_insn_class = 5;
pub const pt_insn_class_ptic_far_call: pt_insn_class = 6;
pub const pt_insn_class_ptic_far_return: pt_insn_class = 7;
pub const pt_insn_class_ptic_far_jump: pt_insn_class = 8;
pub const pt_insn_class_ptic_ptwrite: pt_insn_class = 9;
#[doc = " The instruction class."]
#[doc = ""]
#[doc = " We provide only a very coarse classification suitable for reconstructing"]
#[doc = " the execution flow."]
pub type pt_insn_class = i32;
pub const pt_max_insn_size: _bindgen_ty_1 = 15;
#[doc = " The maximal size of an instruction."]
pub type _bindgen_ty_1 = i32;
#[doc = " A single traced instruction."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_insn {
    #[doc = " The virtual address in its process."]
    pub ip: u64,
    #[doc = " The image section identifier for the section containing this"]
    #[doc = " instruction."]
    #[doc = ""]
    #[doc = " A value of zero means that the section did not have an identifier."]
    #[doc = " The section was not added via an image section cache or the memory"]
    #[doc = " was read via the read memory callback."]
    pub isid: ::std::os::raw::c_int,
    #[doc = " The execution mode."]
    pub mode: pt_exec_mode,
    #[doc = " A coarse classification."]
    pub iclass: pt_insn_class,
    #[doc = " The raw bytes."]
    pub raw: [u8; 15usize],
    #[doc = " The size in bytes."]
    pub size: u8,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
    pub __bindgen_padding_0: [u8; 3usize],
}
#[test]
fn bindgen_test_layout_pt_insn() {
    assert_eq!(
        ::std::mem::size_of::<pt_insn>(),
        40usize,
        concat!("Size of: ", stringify!(pt_insn))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_insn>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_insn))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_insn>())).ip as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_insn),
            "::",
            stringify!(ip)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_insn>())).isid as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_insn),
            "::",
            stringify!(isid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_insn>())).mode as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_insn),
            "::",
            stringify!(mode)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_insn>())).iclass as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_insn),
            "::",
            stringify!(iclass)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_insn>())).raw as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_insn),
            "::",
            stringify!(raw)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_insn>())).size as *const _ as usize },
        35usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_insn),
            "::",
            stringify!(size)
        )
    );
}
